# rust-nix-templater

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  compat.nix  default.nix  flake.nix  shell.nix  treefmt.toml
.github/workflows/: nix.yml  rust.yml
nix/: build.nix  common.nix  devShell.nix
src/: lib.rs  main.rs  options.rs  tests.rs
template/: .gitlab-ci.yml  compat.nix  default.nix  flake.nix  shell.nix
template/.github/workflows/: nix.yml
template/nix/: build.nix  common.nix  devShell.nix  envrc
