[package]
name = "rust-nix-templater"
version = "0.2.5"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Generates Nix files for Rust applications."
repository = "https://github.com/yusdacra/rust-nix-templater"
homepage = "https://github.com/yusdacra/rust-nix-templater"
keywords = ["nix", "generator"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = "1.0"

[profile.release]
# Since we don't have any performance need, we optimize for size
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'

[package.metadata.nix]
app = true
build = true
library = true
