[package]
name = "rust-nix-templater"
version = "0.3.1"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Generates Nix files for Rust applications."
repository = "https://github.com/yusdacra/rust-nix-templater"
homepage = "https://github.com/yusdacra/rust-nix-templater"
keywords = ["nix", "generator"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = {version = "1.0", features = ["backtrace"]}

[profile.release]
# Since we don't have any performance need, we optimize for size
opt-level = 'z'
lto = "thin"
codegen-units = 1
panic = 'abort'

[package.metadata.nix]
app = true
build = true
library = true
systems = ["aarch64-linux", "aarch64-darwin", "i686-linux", "x86_64-darwin", "x86_64-linux"]
